# rcalc

./: Cargo.toml
src/: gui.rs  lib.rs  main.rs
tests/: iter.rs  parse.rs  solve.rs
